# maritime-segmentation

./: .gitignore  CLAUDE.md  EXPERIMENTS.md  pyproject.toml
configs/: cosine_lr.yaml  default.yaml
configs/experiments/: medium_baseline.yaml  medium_lowlr.yaml  nano_baseline.yaml  nano_cosine.yaml  small_baseline.yaml
scripts/: export_onnx.py  predict.py  prepare_lars.py  train.py  train_idun.slurm
scripts/experiments/: __init__.py  compare.py  launch.py  status.py
scripts/slurm/: predict.slurm  train_template.slurm
src/training/: registry.py
